# project-rust

./: Cargo.toml
cmd/http/: Cargo.toml
cmd/http/src/: lib.rs  macros.rs
cmd/http/src/model/: default.rs  mod.rs
cmd/http/src/model/user/: login.rs  mod.rs
cmd/http/src/service/user/: user.rs
script/: run_http.sh
