[package]
name = "project-rust"
version = "0.1.0"
edition = "2018"
authors = ["khai <khaibuixuan2@gmail.com>"]
repository = "https://github.com/buixuankhai1204/project-rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2.1"

